[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biochem"
version = "0.9.0"
description = "Protein–ligand modeling utilities"
authors = [{ name = "Behnam Yousefi" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy",
    "pandas",
    "biopython",
    "rdkit",
    "CDPKit",
]
